[package]
name = "kju-ar"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI
eframe = { version = "0.27", features = ["wgpu"] }
egui = "0.27"
rfd = "0.14"

# Obrázky a kompozice
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "tiff"] }

# QR generátor – přímo do ImageBuffer
qrcode = { version = "0.13", features = ["image"] }

# Pomocné
pathdiff = "0.2"
anyhow = "1.0"
open = "5"
imageproc = "0.23"
sha1 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
